Kubernetes/Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mydeploy
  namespace: ivolve
spec:
  replicas: 3
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: spring
        image: ahmed1399/spring-boot-app:v1
        ports:
        - name: http
          containerPort: 8081
