Kubernetes/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: myservice
  namespace: ivolve
spec:
  type: LoadBalancer
  selector:
    app: myapp
  ports:
  - port: 80 
    targetPort: http
