Kubernetes/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: ivolve
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx    # Ingress Controller
  rules:
  - host: spring.ivolve.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: myservice
            port:
              number: 80
